Many changes... (this commit is awful)
- message:
	- serialization, deserialization,
	- add MessageType (REMOVE).

- ricart-agriwala:
	- modified sendReplyMessages() - now it checks for "memoryAddress"
	- modified so many things that I don't remember...

- main.cpp:
	- changed the way you execute program from command line (args)

--- a/src/makefile
+++ b/src/makefile
@@ -1,11 +1,14 @@
 message = ./message/message.cpp ./message/messageType.cpp
+monitor = ./monitor/monitor.cpp
 utils = ./utils/utils.cpp
 ricart-agrawala = ./ricart-agrawala/ricart-agrawala.cpp
-test = ./test.cpp
-all =  $(utils) $(message) $(ricart-agrawala) $(test)
+test = ./tests/test_ricart_agrawala.cpp ./tests/test_monitor.cpp ./tests/test_message.cpp
+main = ./main.cpp
+all =  $(utils) $(message) $(monitor) $(ricart-agrawala) $(test) $(main)
+libraries = -lzmq -pthread
 
 main: clean debug
-	g++ $(all)
+	g++ $(all) $(libraries)
 
 clean:
 	rm -f main
